--- a/app/src/main/res/layout/fragment_progreso.xml
+++ b/app/src/main/res/layout/fragment_progreso.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundlogo"
+    android:background="@drawable/progresobackground"
+    android:foreground="@drawable/progresobackground"
     tools:context=".Controlador.Progreso">
 
     <LinearLayout
