--- a/app/src/main/res/layout/fragment_retos.xml
+++ b/app/src/main/res/layout/fragment_retos.xml
@@ -1,24 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundlogo_morado"
     tools:context=".Controlador.Retos">
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+
+        android:id="@+id/retosrecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"/>
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Pantalla Retos"
-        android:textColor="@color/black"
-        android:textSize="24dp"
-        android:textAlignment="center">
-
-    </TextView>
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
