--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundlogo_verde"
-    tools:context=".Controlador.Ranking">
+    android:background="@color/colorPrimary"
+    android:orientation="vertical"
+    tools:context=".Controlador.Ranking" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Pantalla Ranking"
-        android:textColor="@color/black"
-        android:textSize="24dp"
-        android:textAlignment="center">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerranking"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    </TextView>
-
-</FrameLayout>
+    </LinearLayout>
+</LinearLayout>
