--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -14,7 +14,7 @@
         <View
             android:id="@+id/first_line"
             android:layout_width="20dp"
-            android:layout_height="50dp"
+            android:layout_height="70dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/white_line"
             android:foreground="@drawable/rounded_cornercero"/>
@@ -22,7 +22,7 @@
         <View
             android:id="@+id/second_line"
             android:layout_width="20dp"
-            android:layout_height="100dp"
+            android:layout_height="120dp"
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/first_line"
             android:background="@drawable/red_line"
@@ -31,7 +31,7 @@
         <View
             android:id="@+id/third_line"
             android:layout_width="20dp"
-            android:layout_height="250dp"
+            android:layout_height="270dp"
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/second_line"
             android:background="@drawable/white_line"
@@ -40,7 +40,7 @@
         <View
             android:id="@+id/fourth_line"
             android:layout_width="20dp"
-            android:layout_height="200dp"
+            android:layout_height="220dp"
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/third_line"
             android:background="@drawable/red_line"
@@ -49,7 +49,7 @@
         <View
             android:id="@+id/fifth_line"
             android:layout_width="20dp"
-            android:layout_height="220dp"
+            android:layout_height="240dp"
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/fourth_line"
             android:background="@drawable/green_line"
@@ -58,7 +58,7 @@
         <View
             android:id="@+id/sixth_line"
             android:layout_width="20dp"
-            android:layout_height="150dp"
+            android:layout_height="170dp"
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/fifth_line"
             android:background="@drawable/white_line"
@@ -71,7 +71,7 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
@@ -97,12 +97,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="50dp"
+                android:layout_marginBottom="65dp"
                 android:text="Ruteando App - Scharff"
                 android:textColor="@color/white"
-                android:textSize="25dp"
-                android:textStyle="bold"
-                app:fontFamily="@font/aldrich" />
+                android:textSize="24dp"
+                android:textStyle="italic"
+                app:fontFamily="@font/carnasitalic" />
 
         </RelativeLayout>
     </LinearLayout>
