--- a/app/src/main/res/layout/fragment_progreso.xml
+++ b/app/src/main/res/layout/fragment_progreso.xml
@@ -3,26 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/progresobackground"
-    android:foreground="@drawable/progresobackground"
+    android:background="@drawable/progresobackgrounds"
+
     tools:context=".Controlador.Progreso">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"/>
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Pantalla Progreso"
-        android:textColor="@color/black"
-        android:textSize="24dp"
-        android:textAlignment="center">
-
-    </TextView>
-
+        <TextView
+            android:id="@+id/pts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Puntos"
+            android:textColor="@color/AmarilloScharff"
+            android:textSize="44dp"
+            android:layout_marginTop="16dp"
+            android:textAlignment="viewEnd"/>
+    </LinearLayout>
 
 
 </FrameLayout>
