--- a/app/src/main/res/layout/retos_list.xml
+++ b/app/src/main/res/layout/retos_list.xml
@@ -1,6 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="3dp"
+    app:cardUseCompatPadding="true"
+    >
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:background="@color/white">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/idImagen"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/retratodemo"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="10dp"/>
+
+        <TextView
+            android:id="@+id/idNombre"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nombre"
+            android:textColor="@color/black"
+            android:layout_toEndOf="@+id/idImagen"
+            android:layout_toRightOf="@+id/idImagen"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/carnasthin"/>
+
+        <TextView
+            android:id="@+id/idDescrip"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Descripción"
+            android:textColor="@color/black"
+            android:layout_toRightOf="@+id/idImagen"
+            android:layout_toEndOf="@+id/idImagen"
+            android:layout_below="@+id/idNombre"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:fontFamily="@font/carnasthin"/>
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
+
