--- a/app/src/main/res/layout/activity_contactar_f.xml
+++ b/app/src/main/res/layout/activity_contactar_f.xml
@@ -18,12 +18,13 @@
         android:layout_marginTop="80dp"
         android:layout_marginStart="0dp"
         android:textAlignment="center"
-        android:textSize="34dp"
+        android:textSize="38dp"
         android:textColor="@color/black"
         android:gravity="center"
         android:textStyle="bold"
+
         android:text="Contáctanos"
-        android:fontFamily="@font/carnasthin"
+        android:fontFamily="@font/carnasbold"
         />
 
     <TextView
@@ -33,43 +34,45 @@
         android:layout_below="@+id/textprin"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:paddingStart="30dp"
+        android:paddingEnd="30dp"
+
         android:layout_marginTop="89dp"
         android:fontFamily="@font/carnasthin"
         android:text="Escríbenos tu duda y te responderemos lo más pronto posible 💬"
         android:textColor="@color/black"
-        android:textSize="20dp" />
+        android:textSize="18dp" />
 
     <EditText
         android:id="@+id/editTextMulti"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btnenviar"
+        android:layout_height="120dp"
         android:layout_below="@+id/textinfo"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="61dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="75dp"
         android:background="@drawable/rounded_cornerneutral"
         android:ems="10"
-        android:hint="Escribe aquí tu texto"
+        android:hint="Escribe aquí tu consulta"
         android:inputType="textMultiLine"
         android:text=""
         android:textAlignment="viewStart"
         android:textColor="@color/black"
         android:textColorHint="@color/grey"
-        android:textSize="21dp" />
+        android:textSize="18dp" />
 
     <Button
         android:id="@+id/btnenviar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/editTextMulti"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="140dp"
+        android:layout_marginTop="61dp"
         android:background="@drawable/rounded_cornermorado"
         android:onClick="onClick"
         android:text="Enviar Mensaje"
