--- a/app/src/main/res/layout/activity_reto_fotografia.xml
+++ b/app/src/main/res/layout/activity_reto_fotografia.xml
@@ -45,7 +45,7 @@
     <ImageView
         android:id="@+id/fotoback"
         android:layout_width="wrap_content"
-        android:layout_height="240dp"
+        android:layout_height="200dp"
         android:layout_below="@id/escogerfoto"
         android:layout_centerInParent="true"
         android:layout_marginLeft="80dp"
@@ -56,7 +56,7 @@
         android:id="@+id/foto"
         android:layout_width="240dp"
         android:layout_marginTop="20dp"
-        android:layout_height="200dp"
+        android:layout_height="160dp"
         android:layout_centerInParent="true"
         android:layout_below="@id/escogerfoto">
 
@@ -65,7 +65,7 @@
     <ImageView
         android:id="@+id/imgtextDescrip"
         android:layout_width="wrap_content"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_below="@id/fotoback"
         android:layout_centerInParent="true"
         android:layout_marginLeft="60dp"
@@ -82,8 +82,8 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="45dp"
         android:textColor="@color/black"
-        android:fontFamily="@font/carnasbold"
-        android:layout_marginTop="70dp"
+        android:fontFamily="@font/carnasthin"
+        android:layout_marginTop="59dp"
         android:layout_alignStart="@+id/imgtextDescrip"
         android:layout_alignEnd="@id/imgtextDescrip"
         android:text="El reto del día de hoy consiste en tomar una fotografía a algún adorno en casa." />
