--- a/app/src/main/res/drawable-v24/rounded_corners.xml
+++ b/app/src/main/res/drawable-v24/rounded_corners.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
+    <solid android:color="@color/white"/>
+
     <!-- view background color -->
     <solid
         android:color="#ffffff" >
@@ -24,7 +26,7 @@
 
     <!-- Here is the corner radius -->
     <corners
-        android:radius="24dp"   >
+        android:radius="40dp"   >
     </corners>
 
 </shape>
