--- a/app/src/main/res/layout/fragment_retos.xml
+++ b/app/src/main/res/layout/fragment_retos.xml
@@ -17,8 +17,6 @@
 
     </ImageView>
 
-
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerranking"
             android:layout_width="match_parent"
@@ -26,7 +24,11 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="50dp"
-            android:background="@drawable/rounded_cornerneutral">
+            android:scaleType="centerCrop"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="30dp"
+
+            >
 
         </androidx.recyclerview.widget.RecyclerView>
 
